Finished creating and fixing tests